--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <h1>Minecraft in Your Browser</h1>
   <p>Select a version to launch:</p>
 
+  <button onclick="launchJar('client-1.jar')">Minecraft Survival Test 0.30</button>
   <button onclick="launchJar('client0.jar')">Minecraft Beta 1.8</button>
   <button onclick="launchJar('client.jar')">Minecraft 1.0.0</button>
   <button onclick="launchJar('client2.jar')">Minecraft 1.4.2</button>
