--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <button onclick="launchEagler('eag4')">1.12</button>
     &nbsp;&nbsp;&nbsp;
     <strong>Java (.jar):</strong>
+    <button onclick="launchJar('client-1.jar')">Survival Test</button>
     <button onclick="launchJar('client0.jar')">Beta 1.8</button>
     <button onclick="launchJar('client1.jar')">1.0.0</button>
     <button onclick="launchJar('client2.jar')">1.4.2</button>
