--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <button onclick="launchEagler('eag1')">Alpha</button>
     <button onclick="launchEagler('eag2')">1.5.2</button>
     <button onclick="launchEagler('eag3')">1.8.8/9</button>
+    <button onclick="launchEagler('eag4')">1.12</button>
     &nbsp;&nbsp;&nbsp;
     <strong>Java (.jar):</strong>
     <button onclick="launchJar('client-1.jar')">Survival Test</button>
@@ -58,7 +59,6 @@
     <button onclick="launchJar('client1.jar')">1.0.0</button>
     <button onclick="launchJar('client2.jar')">1.4.2</button>
     <button onclick="launchJar('client3.jar')">1.14</button>
-    <button onclick="launchJar('client4.jar')">1.21.5</button>
     &nbsp;&nbsp;&nbsp;
     <button onclick="fullscreen()">⛶ Fullscreen</button>
   </div>
