--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <button onclick="launchEagler('eag2')">1.5.2</button>
     <button onclick="launchEagler('eag3')">1.8.8/9</button>
     <button onclick="launchEagler('eag4')">1.12</button>
-    <button onclick="launchEagler('Mine2')">JsText</button>
+    <button onclick="launchEagler('Mine2')"> </button>
     &nbsp;&nbsp;&nbsp;
     <strong>Java (.jar):</strong>
     <button onclick="launchJar('client-1.jar')">Survival Test</button>
